--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mapbox/whoots-js": "^3.0.0",
     "brfs": "^1.4.0",
     "bubleify": "^0.7.0",
+    "cached-vector-tile": "^1.0.1",
     "csscolorparser": "~1.0.2",
     "earcut": "^2.1.3",
     "geojson-rewind": "^0.3.0",
@@ -31,6 +32,7 @@
     "grid-index": "^1.0.0",
     "jsonlint-lines-primitives": "~1.6.0",
     "minimist": "0.0.8",
+    "object-path": "^0.11.2",    
     "package-json-versionify": "^1.0.2",
     "pbf": "^3.0.5",
     "quickselect": "^1.0.0",
